layout 파일의 style.css 부분 한 줄 수정

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,10 +3,11 @@
 	<title>tutti</title>
 	<meta http-equiv="X-UA-Compatible"" content="text/html; IE=edge; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="뚜띠, tutti, 결혼식, 웨딩, 음악">
+
 	
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.css') }}">
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap-theme.css') }}">
 	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap-theme.css') }}">
 	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
