html파일 텍스트 수정 및 style.css 수정, bootstrap.css 아주 일부만 수정

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,13 +5,12 @@
 }
 
 
-
-
-
 body {
-    background: #CAECE9;
-    font-family: 'Trebuchet MS', sans-serif;
-    font-size: 14px;
+  font-family: 'Courier New', 'Malgun Gothic', 'Nanum Gothic', Verdana;
+  letter-spacing: -0.07em;
+  font-size: 1em;
+  line-height: 1.7em;
+  background-color: #f4f4f4;
 }
 
 a {
@@ -34,31 +33,40 @@ input[type="submit"] {
     color: white;
 }
 
+
+
 div.page {
     background: white;
-    border: 1px solid #6ECCC4;
     width: 900px;
     margin: 0px auto;
 }
 
 div.page h1 {
-    background: #6ECCC4;
-    margin: 0;
-    padding: 10px 14px;
-    color: white;
-    letter-spacing: 1px;
-    text-shadow: 0 0 3px #24776F;
-    font-weight: normal;
+    height: 15%;
+    padding: 1em 1em 0em 1em;
+    color: #000;
+    text-align: center;
+    letter-spacing: 0.1em;
+    font-size: 3em;
+    font-weight: bold;
+}
+
+div.page h2{
+	padding: 0em 0em 1em 0em;
+	text-align: center;
+	letter-spacing: 0.1em;
+	font-size: 1em;
 }
 
 div.page div.navigation {
-    background: #DEE9E8;
+    background: #fff;
     padding: 4px 10px;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #eee;
-    color: #888;
-    font-size: 12px;
-    letter-spacing: 0.5px;
+    border-top: 1px dotted #000;
+    border-bottom: 1px dotted #000;
+    color: #000;
+    text-align: center;
+    font-size: 1em;
+    letter-spacing: 0.2em;
 }
 
 div.page div.navigation a {
