--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<title>tutti</title>
+	<title>tutti, best day best music</title>
 	<meta http-equiv="X-UA-Compatible"" content="text/html; IE=edge; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -17,7 +17,8 @@
 <body>
 
 <div class='page'>
-	<h1>Tutti</h1>
+	<h1>tutti</h1>
+	<h2>BEST DAY, BEST MUSIC</h2>
 	<div class=navigation>
 		<a href="{{ url_for('index') }}">HOME</a> | 
 		<a href="{{ url_for('about') }}">TUTTI</a> | 
