--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,16 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<div class=movie>
-	<p> 3/8(토) 도곡동 율하우스에서 작업한 뚜띠의 첫 연주 실연 영상이 업데이트 되었습니다 </p>
-	<iframe width="560" height="315" src="//www.youtube.com/embed/Lg4yzZS5G2k" frameborder="0" allowfullscreen></iframe>
-	<p><button class='btn btn-danger'>tutti on Youytube</button><br>
-	위 동영상에서 연주한 곡은 Erik Satie의 Je te veux(I want you) 입니다.<br>
-	Our service - Repetory 메뉴를 이용하시거나, 위 버튼을 누르신 뒤 뚜띠의 YouTube 채널을 방문하여<br>
-	더 많은 곡들을 편리하게 감상하실 수 있습니다.</p>
+<div class=greeting>
+	<p>반가워요!<br>멋진 음악과 훌륭한 뮤지션을 만날 수 있는 가장 쉬운 방법, 뚜띠입니다!</p>
 </div>
+
+<div class=movie>
+	<iframe width="560" height="315" src="//www.youtube.com/embed/Lg4yzZS5G2k" frameborder="0" allowfullscreen></iframe>
+	<p><button class='btn btn-danger'>뚜띠 유투브 채널</button><br>
+	유투브의 뚜띠 채널을 방문하여, 더 많은 동영상을 감상해보세요~</p>
+</div>
+
 <div class=introduction>
 	<div class="container-fluid">
 		<div class="row">
