--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -6,7 +6,7 @@
 
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
-  font-family: sans-serif;
+  font-family: 'Courier New', 'Malgun Gothic', 'Nanum Gothic', Verdana;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -268,16 +268,14 @@ th {
           box-sizing: border-box;
 }
 html {
-  font-size: 62.5%;
-
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: #333;
-  background-color: #fff;
+  font-family: 'Courier New', 'Malgun Gothic', 'Nanum Gothic', Verdana;
+  letter-spacing: -0.07em;
+  font-size: 1em;
+  line-height: 1.7em;
+  background-color: #f3f3f3;
 }
 input,
 button,
@@ -466,7 +464,7 @@ h6,
   font-size: 12px;
 }
 p {
-  margin: 0 0 10px;
+  /*margin: 0 0 10px;*/
 }
 .lead {
   margin-bottom: 20px;
