CSS 상단 margin 제거 페북/블로그 로고 삽입 repertory 페이지 수정 쓸데없는 메뉴 제거 (컨택, 블로그)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,184 +1,188 @@
-
 .repertory {
 	width: 160px;
 	height: 160px;
 }
 
-
 body {
-  font-family: 'Courier New', 'Malgun Gothic', 'Nanum Gothic', Verdana;
-  letter-spacing: -0.07em;
-  font-size: 1em;
-  line-height: 1.7em;
-  background-color: #f4f4f4;
+	font-family: 'Courier New', 'Malgun Gothic', 'Nanum Gothic', Verdana;
+	letter-spacing: -0.07em;
+	font-size: 1em;
+	line-height: 1.7em;
+	background-color: #f4f4f4;
 }
 
+
+
 a {
-    color: #26776F;
+	color: #26776F;
 }
 
 a:hover {
-    color: #333;
+	color: #333;
 }
 
 input[type="submit"] {
-    background: #105751;
-    border: 1px solid #073B36;
-    padding: 1px 3px;
-    font-family: 'Trebuchet MS', sans-serif;
-    font-size: 14px;
-    font-weight: bold;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    color: white;
+	background: #105751;
+	border: 1px solid #073B36;
+	padding: 1px 3px;
+	font-family: 'Trebuchet MS', sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	color: white;
 }
 
-
+div.page #links {
+	float:right;
+}
 
 div.page {
-    background: white;
-    width: 900px;
-    margin: 0px auto;
+	background: white;
+	width: 900px;
+	margin: 0px auto;
 }
 
 div.page h1 {
-    height: 15%;
-    padding: 1em 1em 0em 1em;
-    color: #000;
-    text-align: center;
-    letter-spacing: 0.1em;
-    font-size: 3em;
-    font-weight: bold;
-}
-
-div.page h2{
-	padding: 0em 0em 1em 0em;
+	height: 15%;
+	padding: 1em 1em 0em 1em;
+	color: #000;
 	text-align: center;
 	letter-spacing: 0.1em;
-	font-size: 1em;
-}
-
-div.page div.navigation {
-    background: #fff;
-    padding: 4px 10px;
-    border-top: 1px dotted #000;
-    border-bottom: 1px dotted #000;
-    color: #000;
-    text-align: center;
-    font-size: 1em;
-    letter-spacing: 0.2em;
-}
-
-div.page div.navigation a {
-    color: #444;
-    font-weight: bold;
+	font-size: 3em;
+	font-weight: bold;
+	margin: 0px auto;
 }
 
 div.page h2 {
-    margin: 0 0 15px 0;
-    color: #105751;
-    //text-shadow: 0 1px 2px #ccc;
+	text-align: center;
+	letter-spacing: 0.1em;
+	font-size: 1em;
+	margin: 0px auto;
+	padding: 1em 1em 0em 1em;
+}
+
+div.page div.navigation {
+	background: #fff;
+	padding: 4px 10px;
+	border-top: 1px dotted #000;
+	border-bottom: 1px dotted #000;
+	color: #000;
+	text-align: center;
+	font-size: 1em;
+	letter-spacing: 0.2em;
+}
+
+div.page div.navigation a {
+	color: #444;
+	font-weight: bold;
+}
+
+div.page h2 {
+	margin: 0 0 15px 0;
+	color: #105751; //
+	text-shadow: 0 1px 2px #ccc;
 }
 
 div.page div.body {
-    padding: 10px;
+	padding: 10px;
 }
 
 div.page div.footer {
-    background: #eee;
-    color: #888;
-    padding: 5px 10px;
-    font-size: 12px;
+	background: #eee;
+	color: #888;
+	padding: 5px 10px;
+	font-size: 12px;
 }
 
 div.page div.followstatus {
-    border: 1px solid #ccc;
-    background: #E3EBEA;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    padding: 3px;
-    font-size: 13px;
+	border: 1px solid #ccc;
+	background: #E3EBEA;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 3px;
+	font-size: 13px;
 }
 
 div.page ul.messages {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 div.page ul.messages li {
-    margin: 10px 0;
-    padding: 5px;
-    background: #F0FAF9;
-    border: 1px solid #DBF3F1;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    min-height: 48px;
+	margin: 10px 0;
+	padding: 5px;
+	background: #F0FAF9;
+	border: 1px solid #DBF3F1;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	min-height: 48px;
 }
 
 div.page ul.messages p {
-    margin: 0;
+	margin: 0;
 }
 
 div.page ul.messages li img {
-    float: left;
-    padding: 0 10px 0 0;
+	float: left;
+	padding: 0 10px 0 0;
 }
 
 div.page ul.messages li small {
-    font-size: 0.9em;
-    color: #888;
+	font-size: 0.9em;
+	color: #888;
 }
 
 div.page div.twitbox {
-    margin: 10px 0;
-    padding: 5px;
-    background: #F0FAF9;
-    border: 1px solid #94E2DA;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
+	margin: 10px 0;
+	padding: 5px;
+	background: #F0FAF9;
+	border: 1px solid #94E2DA;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 
 div.page div.twitbox h3 {
-    margin: 0;
-    font-size: 1em;
-    color: #2C7E76;
+	margin: 0;
+	font-size: 1em;
+	color: #2C7E76;
 }
 
 div.page div.twitbox p {
-    margin: 0;
+	margin: 0;
 }
 
 div.page div.twitbox input[type="text"] {
-    width: 585px;
+	width: 585px;
 }
 
 div.page div.twitbox input[type="submit"] {
-    width: 70px;
-    margin-left: 5px;
+	width: 70px;
+	margin-left: 5px;
 }
 
 ul.flashes {
-    list-style: none;
-    margin: 10px 10px 0 10px;
-    padding: 0;
+	list-style: none;
+	margin: 10px 10px 0 10px;
+	padding: 0;
 }
 
 ul.flashes li {
-    background: #B9F3ED;
-    border: 1px solid #81CEC6;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    padding: 4px;
-    font-size: 13px;
+	background: #B9F3ED;
+	border: 1px solid #81CEC6;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+	font-size: 13px;
 }
 
 div.error {
-    margin: 10px 0;
-    background: #FAE4E4;
-    border: 1px solid #DD6F6F;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    padding: 4px;
-    font-size: 13px;
+	margin: 10px 0;
+	background: #FAE4E4;
+	border: 1px solid #DD6F6F;
+	-moz-border-radius: 2px;
+	-webkit-border-radius: 2px;
+	padding: 4px;
+	font-size: 13px;
 }
