--- a/templates/request.html
+++ b/templates/request.html
@@ -46,11 +46,9 @@
 		<label class="col-xs-6 control-label">악기 구성</label>
 		<div class="col-xs-4">
 			<select class="form-control">
-				<option>장구</option>
-				<option>꽹과리</option>
-				<option>북</option>
-				<option>징</option>
-				<option>단소</option>
+				<option>클래식 피아노 독주: ￦ 70,000</option>
+				<option>클래식 피아노 3중주: ￦ 170,000</option>
+				<option>클래식 피아노 4중주: ￦ 220,000</option>
 			</select>
 		</div>
 	</div>
