블로그/페북 링크 삽입

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,8 +27,8 @@
 	<div class='page'>
 		<h1>tutti</h1>
 		<div id="links">
-			<img src="../static/images/icon_blog.png"> 
-			<img src="../static/images/icon_facebook.png">
+			<a href="http://blog.naver.com/tutti_tutto"><img src="../static/images/icon_blog.png"></a>
+			<a href="https://www.facebook.com/pages/TUTTI/523736307747770"><img src="../static/images/icon_facebook.png"></a>
 		</div>
 		<h2>BEST DAY, BEST MUSIC</h2>
 		
