--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,7 @@ div.page h2 {
 	font-size: 1em;
 	margin: 0px auto;
 	padding: 1em 1em 0em 1em;
+	position: static;
 }
 
 div.page div.navigation {
